force-app/main/default/objects/RE_Record_Id_Mappings__c/RE_Record_Id_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for storing Record ld for Revolution</description>
    <label>RE Record Id Mappings</label>
</CustomObject>