force-app/main/default/objects/RE_Record_Id_Mappings__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>