force-app/main/default/objects/RE_Record_Id_Mappings__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>