force-app/main/default/objects/RE_Record_Id_Mappings__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <label>Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>