force-app/main/default/objects/RE_Record_Id_Mappings__c/listViews/Canada_Report.listView-meta.xml
<ListView>
    <fullName>Canada_Report</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>Purpose__c</columns>
    <columns>Type_Name__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada Report</label>
    <language>en_US</language>
</ListView>